# middleware_scoring

./: =6.0  labels.csv  pyproject.toml  requirements.txt  scores.jsonl  scores.jsonl.features.jsonl
docker/: Dockerfile
docs/: calibration.md
fixtures/: companies.jsonl
norm_contexts/: ns_2025-08-07.json  sha256_0e318918026b81143edd92f915ddb347d2285323c9b0cd505746cf6ec3480088.json
policy/: policy.yaml
results/: aioscore.db
schemas/: company_schema_1_0_0.json  schema_lock.json
scripts/: calibrate.py  drift_check.py  gen_norm_context.py  make_calibration_report.py  score.http  sensitivity.py
src/aioscore/: logging.py
src/aioscore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/aioscore/api/: models.py  server.py
src/aioscore/cli/: batch.py  main.py
src/aioscore/contracts/: company_v1.py  schema_loader.py  validator.py
src/aioscore/io/: hashing.py  jsonl.py  timestamps.py
src/aioscore/monitoring/: drift.py
src/aioscore/normalization/: apply.py  stats.py  transforms.py
src/aioscore/persist/: db.py
src/aioscore/risk/: assess.py
src/aioscore/scoring/: final.py  reason.py  subscores.py
src/aioscore/sdk/: __init__.py  client.py
tests/: test_contracts.py  test_final_score.py  test_normalization.py  test_reason_text.py  test_schema_lock.py  test_subscores.py
weights/: weights.yaml
